src/App.scss
#root {
  max-width: 1280px;
  height: 100%;
  margin: auto;
  text-align: center;
  padding: 0 10%;
}

.container {
  display: flex;
  justify-content: center;
  
  .inner-container {
    display: flex;
    justify-content: center;
  }
}

.machineContainer {
  flex: 4;
}

.coinContainer {
  flex: 1;
}

.vending-machine {
  text-align: center;
  padding: 20px;
  background-color: #242424;
  border: 1px solid #ccc;
  border-radius: 8px;

  .vending-machine-screen {
    padding: 10px 0;
    color: #201a17;
    background-color: #ccc;
    border-radius: 8px;
    height: 110px;
    width: 65%;
    margin: auto;
    margin-top: 20px;
    text-shadow: 1px 1px 0 rgba(0, 0, 0, 0.3);

    p {
      margin: 0;
      padding: 0;
      font-size: 24px;
      font-weight: bold;
    }
  }
}

.grid {
  display: flex;
  flex-wrap: wrap;
  gap: 20px;
  max-width: 600px;
  margin: 20px;
  justify-content: center;

  .grid-button {
    background-color: #201a17;
    border: 1px solid #ccc;
    padding: 10px;
    width: 200px;
    height: 100px;
    cursor: pointer;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    transition: background-color 0.3s ease;
    font-size: 16px;

    &:hover {
      background-color: #32241d;
    }
  }
}

.coins {
  max-width: 10%;
  height: 90%;
  align-self: center;

  .coin-buttons {
    button {
      margin: 10px;
      height: 70px;
      width: 70px;
      min-width: 40px;
      min-height: 40px;
      border-radius: 50%;
      background-color: #504a28;
      border: 1px solid #ccc;
      cursor: pointer;
      transition: background-color 0.3s ease;
      font-size: 14px;
    }
  }

  .return-cash {
    button {
      max-width: 70%;
      min-width: 40px;
      margin: 10px;
      border-radius: 8px;
      background-color: #2b3d6d;
      border: 1px solid #ccc;
      cursor: pointer;
      transition: background-color 0.3s ease;
      font-size: 14px;
    }
  }
}

.progress-bar {
  margin-top: 10px;
  width: 0%;
  height: 16px;
  background-color: #4caf50;
  animation: fillProgressBar 5s linear forwards;
}

@keyframes fillProgressBar {
  0% {
    width: 0%;
  }
  100% {
    width: 100%;
  }
}

.progress-bar-container {
  width: 100%;
  height: 20px;
}

.product-content {
  display: flex;
  align-items: center;

  .product-image {
    width: 80px;
    height: 80px;
    margin: 10px;
    border-radius: 8px;
  }

  .product-info {
    margin: 0;
    width: 100px;
  }
}

.loading {
  display: flex;
  align-items: center;
  justify-content: center;
  height: 100vh;

  .loader {
    border: 16px solid #242424;
    border-top: 16px solid #4caf50;
    border-radius: 50%;
    width: 120px;
    height: 120px;
    animation: spin 2s linear infinite;
  }
}

@keyframes spin {
  0% { transform: rotate(0deg); }
  100% { transform: rotate(360deg); }
}

